// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correct html for 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.25
  </h1>
</div>
`;

exports[`should render correct html for more than 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $2.50
  </h1>
</div>
`;
